# delta-sharing-rs

./: .commitlintrc.mjs  .dockerignore  .editorconfig  .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README-next.md  README.md  buf.gen.yaml  build.rs  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.sqlx/: query-0a462e30309516b3674cc732710a4af0d5d85ec60fcc45dc5fd52925524e32e0.json  query-0f11b31243112161602d9ab712230b34d82587e41e0c30bee5d85af40f8bfa35.json  query-1164a04b25a54de3ec2fbe41cce9563a9daceba18f8c1cbcc6622036313a8bc6.json  query-14811707fe39204a4e9a3cb00fb5ed765c9f39335d204dd9574e76e28616eabd.json  query-2361c3662baded0771f273700084e8390ccefbf0830fd4028e784f6f36abfabd.json  query-287fb239e6657215c585073bdd065c282136d192faa11079d15315fd8681d710.json  query-2ffd1ce40de559df743970280b773de0d6752273c19eefc3d372baed1d38faa0.json  query-4512d181a9a630efa4a527a7331968bfe239332de5de6b3f8c61f9bb30f6b8e6.json  query-45c364fd30e52474dfe2728d33edf0dbcdfcf95de75f5a1f95bff8be2d2910bf.json  query-48de4b38931fb102413db7b1734ee393656bcaf9603f36ce3f467ddd442fcca3.json  query-4c9724327fedc0f0f6e40404905b84b7f716cd62ddc9f1880c3880442a916fa6.json  query-515df4c418afe85c139de35deab02b581af69caaacaa0853e702f6fa41459778.json  query-5f11e9d7ff87435918ac5a44f346afd1acfeee83552e57dba7a211c908498b70.json  query-606bf662bf28a496073d5148dca59694691c5ef36114fdd1de05e738fc1801db.json  query-70bed3715f0ba023e0ac12cf08e525f508e5ca249cac885bb78a6998cca3dee0.json  query-762d00fc0e14e9e0f374a744fb44525b17e134d54e6f01836b5619c604a1ccbc.json  query-7d2aa78827d075b76670782c304e42b07ba371b6233fab25ab620120d3f600b0.json  query-7edc112031d2eb551a8f3e0399a715192ab9e4c37e642c952a8a9436743cecb9.json  query-9ac8906b317e67c42ce575722a6462c6cf8f19ebb733f56f4f53af83057cf14c.json  query-9d6a27adfde48dc3779afbcc17ec50e26e48ca6ea84e4d29e5c4a8ad56fee447.json  query-a6ed1ec6319c2dc38e147fb8cb18daf0173b42e3ca17c09dddead2e90b3f5e5a.json  query-ab3eaf0059f05a8de375a2aed831f3d66c4459ba32a1fa77fa60fb0cda8ab09f.json  query-af5688305305dc5369380a138a5c5069859d2e560727628a17d70ad189fcbbaf.json  query-affc63359ae34f4f1089c96b9ed68341886739b59b7c25d046725757fb581508.json  query-b9594b4ea65a14d2b0247ffed055e797c32f7bbf855d13c3b978687e8fb8c644.json  (+12 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: client.rs  error.rs  lib.rs
delta-sharing/cli/: Cargo.toml
delta-sharing/cli/src/: client.rs  config.rs  main.rs  server.rs
delta-sharing/client/: Cargo.toml
delta-sharing/client/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  service.rs  sharing.rs
delta-sharing/client/src/client/: backoff.rs  mock_server.rs  mod.rs  pagination.rs  retry.rs  token.rs
delta-sharing/cloud-client/: Cargo.toml  README.md
delta-sharing/cloud-client/src/: backoff.rs  client.rs  config.rs  credential.rs  error.rs  lib.rs  retry.rs  token.rs  util.rs
delta-sharing/cloud-client/src/aws/: builder.rs  checksum.rs  credential.rs  mod.rs
delta-sharing/cloud-client/src/azure/: builder.rs  credential.rs  credentials.rs  mod.rs
delta-sharing/cloud-client/src/gcp/: builder.rs  credential.rs  mod.rs
delta-sharing/common/: Cargo.toml
delta-sharing/common/src/: capabilities.rs  error.rs  extractors.rs  grpc.rs  handler.rs  in_memory.rs  kernel.rs  lib.rs  managers.rs  memory.rs  models.rs  repository.rs  resources.rs  rest.rs  secrets.rs
delta-sharing/common/src/api/: catalog.rs  catalogs.rs  credentials.rs  external_locations.rs  mod.rs  recipients.rs  schemas.rs  shares.rs  sharing.rs  tables.rs
delta-sharing/common/src/grpc/: mod.rs
delta-sharing/common/src/handlers/: catalog.rs  credentials.rs  external_locations.rs  mod.rs  recipients.rs  schemas.rs  shares.rs  sharing.rs
delta-sharing/common/src/kernel/: conversion.rs  mod.rs  predicate.rs
delta-sharing/common/src/models/: mod.rs  object.rs  properties.rs  requests.rs
delta-sharing/common/src/policies/: mod.rs
delta-sharing/common/src/policy/: constant.rs  mod.rs
delta-sharing/common/src/profiles/: mod.rs  tokens.rs
delta-sharing/common/src/resources/: mod.rs  name.rs  store.rs
delta-sharing/common/src/rest/: auth.rs  catalog.rs  client.rs  credentials.rs  extractors.rs  integration.rs  mod.rs  repo.rs  router.rs  schemas.rs  sharing.rs
delta-sharing/common/src/rest/integration/: catalogs.rs  external_locations.rs  mod.rs
delta-sharing/common/src/server/: grpc.rs  mod.rs  rest.rs
delta-sharing/common/src/server/multiplex/: mod.rs  service.rs
delta-sharing/core/: Cargo.toml
delta-sharing/core/src/: capabilities.rs  error.rs  in_memory.rs  kernel.rs  lib.rs  main.rs  traits.rs
delta-sharing/core/src/discovery/: in_memory.rs  mod.rs
delta-sharing/core/src/handlers/: in_memory.rs  mod.rs
delta-sharing/core/src/policies/: mod.rs  profile.rs  tokens.rs
delta-sharing/core/src/query/: kernel.rs  mod.rs
delta-sharing/derive/: Cargo.toml
delta-sharing/derive/src/: conversions.rs  lib.rs  parsing.rs  rest_handlers.rs
delta-sharing/postgres/: Cargo.toml  README.md  justfile
delta-sharing/postgres/migrations/: 01_uuidv7.down.sql  01_uuidv7.up.sql  02_update_trigger.down.sql  02_update_trigger.up.sql  03_graph.down.sql  03_graph.up.sql  04_tables.up.sql  20241201191444_init.down.sql  20241201191444_init.up.sql
delta-sharing/postgres/src/: constants.rs  conversions.rs  error.rs  lib.rs  pagination.rs  resources.rs  schema.rs
delta-sharing/postgres/src/graph/: mod.rs  sharing.rs  store.rs
delta-sharing/postgres/tests/: graph_store.rs  repo.rs  sharing_repo.rs
delta-sharing/profiles/: Cargo.toml
delta-sharing/profiles/src/: in_memory.rs  lib.rs  tokens.rs
delta-sharing/server/: Cargo.toml  openapi.yaml
delta-sharing/server/src/: auth.rs  capabilities.rs  error.rs  extractors.rs  grpc.rs  handler.rs  lib.rs  main.rs  server.rs  shutdown.rs
delta-sharing/server/src/grpc/: mod.rs  service.rs
delta-sharing/server/src/rest/: auth.rs  mod.rs  router.rs  tests.rs
testutils/: Cargo.toml
testutils/src/: dat.rs  io.rs  lib.rs  main.rs  rand.rs  storage.rs  utils.rs
(+360 files in other folders)
