[workspace]
resolver = "2"
members = ["delta-sharing/*"]

[workspace.dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
delta_kernel = { version = "0.5.0", features = [
    "tokio",
    "developer-visibility",
    "default-engine",
] }
futures = { version = "0.3.31" }
http = { version = "1.2" }
hyper = { version = "1.6" }
object_store = { version = "0.11.1" }
pbjson = { version = "0.7" }
prost = { version = "0.13.3" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "http2",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tonic = { version = "0.12.3" }
tower = { version = "0.5", features = ["limit", "filter", "util"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
    "serde",
    "std",
], default-features = false }

[package]
name = "delta-sharing-legacy"
version = "0.1.3"
authors = ["Shingo OKAWA <shingo.okawa.g.h.c@gmail.com>"]
edition = "2021"
rust-version = "1.81"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

argon2 = "0.5.0"
anyhow = { version = "1.0.69", features = ["backtrace"] }
async-session = "3.0.0"
axum = "0.8"
axum-extra = { version = "0.10", features = ["json-lines"] }
deltalake = { version = "0.22", features = ["s3", "azure", "gcs"] }
futures-util = "0.3.28"
tokio = { version = "1.25.0", features = ["full", "rt-multi-thread"] }
config = "0.15"
colored = "2.0.0"
cookie = "0.18"
getset = "0.1.2"
glob = "0.3.1"
git-version = "0.3.5"
jsonwebtoken = "9.3"
md5 = "0.7.0"
object_store = { version = "0.11.1", features = ["aws", "azure", "gcp"] }
once_cell = "1.17.1"
rand = "0.8.5"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
serde_yaml = "0.9.17"
shellexpand = "3.1.0"
sqlx = { version = "0.7", features = [
    "postgres",
    "chrono",
    "uuid",
    "json",
    "runtime-tokio-rustls",
    "migrate",
] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tame-gcs = { version = "0.12.0", features = ["signing"] }
time = { version = "0.3.36", features = ["local-offset"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
futures = "0.3.26"
serial_test = "3"
testutils = { path = "testutils" }
testcontainers = "0.14"
