[workspace]
resolver = "2"
members = ["delta-sharing/*"]

[workspace.dependencies]
async-trait = "0.1.83"
bytes = { version = "1.1" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
delta_kernel = { version = "0.5.0", features = [
    "tokio",
    "developer-visibility",
    "default-engine",
] }
futures = { version = "0.3.31" }
http = { version = "1.2" }
hyper = { version = "1.6" }
object_store = { version = "0.11.1" }
pbjson = { version = "0.7" }
prost = { version = "0.13.3" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "http2",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "1"
tonic = { version = "0.12.3" }
tower = { version = "0.5", features = ["limit", "filter", "util"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
    "serde",
    "std",
], default-features = false }
