[project]
name = "delta-sharing-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator>=0.28.1",
    "deltalake>=0.24.0",
    "ipykernel>=6.29.5",
    "mkdocs-material>=9.6.4",
    "requests>=2.32.3",
]

[tool.uv]
package = false

[tool.datamodel-codegen]
field-constraints = true
snake-case-field = true
strip-default-none = false
target-python-version = "3.11"
use-annotated = true
