[package]
name = "testutils"
version = "1.0.0"
authors = ["Shingo OKAWA <shingo.okawa.g.h.c@gmail.com>"]
edition = "2021"
rust-version = "1.67"
publish = false

[lib]
name = "testutils"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
delta_kernel = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true, features = ["azure"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

rand = { version = "0.8.5" }
regex = { version = "1.4.2" }
tempfile = { version = "3.3.0" }
thiserror = { version = "1.0.29" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
