[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = ["tracing"] }
tauri-plugin-opener = "2"

cloud-client = { path = "../../delta-sharing/cloud-client" }
delta-sharing-common = { path = "../../delta-sharing/common" }
