[package]
name = "delta-sharing-client"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <robstar.pack@gmail.com>"]

[dependencies] # in alphabetical order
delta-sharing-core = { path = "../core", default-features = false }

# workspace dependencies
async-trait.workspace = true
delta_kernel.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true

# client dependencies
futures = "0.3"
humantime = "2.1"
hyper = { version = "1.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
rand = { version = "0.8", default-features = false, features = [
    "std",
    "std_rng",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "http2",
] }
ring = { version = "0.17", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }

[dev-dependencies] # in alphabetical order
hyper = { version = "1.2", features = ["server"] }
hyper-util = "0.1"
parking_lot = { version = "0.12" }
