[package]
name = "delta-sharing-client"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
rust-version = "1.81"

[dependencies]
# workspace dependencies (in alphabetical order)
async-trait = { workspace = true }
delta_kernel = { workspace = true }
futures = { workspace = true }
pbjson = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# client dependencies (in alphabetical order)
humantime = "2.1"
hyper = { version = "1.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
rand = { version = "0.8", default-features = false, features = [
    "std",
    "std_rng",
] }
ring = { version = "0.17", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }

[dev-dependencies] # in alphabetical order
hyper = { version = "1.2", features = ["server"] }
hyper-util = "0.1"
parking_lot = { version = "0.12" }
