[package]
name = "delta-sharing-common"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
rust-version = "1.81"

[dependencies]
delta-sharing-derive = { path = "../derive" }

# workspace dependencies (in alphabetical order)
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
delta_kernel = { workspace = true }
http = { workspace = true, optional = true }
object_store = { workspace = true }
pbjson = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tower = { workspace = true, features = ["make"], optional = true }
tracing = { workspace = true }
url = { workspace = true }

# server dependencies (in alphabetical order)
pbjson-types = "0.7"
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }

# in-memory handler dependencies (in alphabetical order)
dashmap = { version = "6", optional = true }
uuid = { version = "1" }

# axum handler dependencies (in alphabetical order)
axum = { version = "0.8", optional = true }
futures-util = { version = "0.3.28" }
itertools = "0.14.0"
sqlx = { version = "0.8", optional = true, features = [
    "uuid",
    "macros",
    "chrono",
    "json",
] }

# integration test dependencies (in alphabetical order)
http-body-util = { version = "0.1.0", optional = true }
mime = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "*"
testutils = { path = "../../testutils" }
uuid = { version = "1.8", features = ["v4"] }
mime = "0.3"
http-body-util = "0.1.0"

[features]
default = ["memory", "axum", "grpc"]
memory = ["dashmap", "uuid/v7"]
axum = ["dep:axum", "http", "tower"]

# The grpc features provides implementations to support
# building a gPRC servers and clients.
grpc = ["dep:tonic"]

# Derives sqlx traits for some types in this crate
sqlx = ["dep:sqlx"]

# exposes functions that help testing cutom handler / router implementations.
integration = ["http-body-util", "mime"]
