[package]
name = "delta-sharing"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <robstar.pack@gmail.com>"]

[dependencies]
delta-sharing-common = { path = "../common" }
delta-sharing-client = { path = "../client", optional = true }
delta-sharing-server = { path = "../server", optional = true }

# workspace dependencies (in alphabetical order)
clap.workspace = true
serde.workspace = true

tokio = { version = "1", features = ["full"] }

[features]
default = ["server", "client"]
server = ["delta-sharing-server"]
client = ["delta-sharing-client"]
