[package]
name = "delta-sharing-derive"
description = "Derive macros for delta_sharing"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
convert_case = "0.7"
