[package]
name = "delta-sharing-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

sqlx = { version = "0.8", features = [
    "postgres",
    "chrono",
    "uuid",
    "json",
    "runtime-tokio-rustls",
    "migrate",
    "macros",
] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }

[features]
# feature flags for integration tests
# running integration tests requires a running PostgreSQL instance
# and DATABASE_URL environment variable set
integration-pg = []
