[package]
name = "delta-sharing-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
# path dependencies (in alphabetical order)
delta-sharing-common = { path = "../common", default-features = false, features = [
    "sqlx",
] }
delta-sharing-derive = { path = "../derive" }

# workspace dependencies (in alphabetical order)
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value", "preserve_order"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# crates.io dependencies (in alphabetical order)
base64 = "0.22"
itertools = "0.14"
paste = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "chrono",
    "uuid",
    "json",
    "runtime-tokio-rustls",
    "migrate",
    "macros",
] }
uuid = { version = "1.8", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }
delta-sharing-common = { path = "../common", default-features = false, features = [
    "sqlx",
    "axum",
] }

[features]
default = []
# feature flags for integration tests
# running integration tests requires a running PostgreSQL instance
# and DATABASE_URL environment variable set
integration-pg = ["delta-sharing-common/integration"]
