[package]
name = "delta-sharing-server"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <robstar.pack@gmail.com>"]

[dependencies]
delta-sharing-core = { path = "../core" }

# workspace dependencies (in alphabetical order)
async-trait.workspace = true
clap.workspace = true
delta_kernel.workspace = true
serde.workspace = true
tower.workspace = true
tracing.workspace = true
http.workspace = true

# server dependencies (in alphabetical order)
axum = "0.7.5"
futures-util = "0.3.28"
serde_yml = { version = "0.0.5" }
tokio = { version = "1.10.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
tower = "*"
http = "*"
http-body-util = "*"
serde_json = "*"
