[package]
name = "delta-sharing-server"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <robstar.pack@gmail.com>"]

[dependencies]
# path dependencies (in alphabetical order)
delta-sharing-common = { path = "../common", features = ["axum"] }

# workspace dependencies (in alphabetical order)
async-trait = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
tonic = { workspace = true, optional = true }
tower = { workspace = true, features = ["make"], optional = true }
tracing = { workspace = true }
url = { workspace = true }

# crates.io dependencies (in alphabetical order)
axum = { version = "0.8", optional = true }
futures-util = "0.3.28"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = "*"
http = "*"
http-body-util = "*"
serde_json = "*"
testutils = { path = "../../testutils" }

[features]
default = ["rest", "grpc"]
rest = ["delta-sharing-common/axum", "axum", "tower"]
grpc = ["delta-sharing-common/grpc", "tonic"]
